# Neotron-Apps

./: Cargo.toml  README.md  neotron-cortex-m.ld
.cargo/: config.toml
.github/workflows/: build.yml
flames/: Cargo.toml
neoplay/: Cargo.toml  README.md
neoplay/src/: main.rs  player.rs
snake/: Cargo.toml  build.rs
snake/src/: lib.rs  main.rs
